--- a/chat.html
+++ b/chat.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-        <title>FireBase</title>
+        <title>LiveChat</title>
         <script src = 'https://cdn.firebase.com/js/client/2.4.1/firebase.js'></script>
         <script src = 'https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js'></script>
         
