--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-        <title>Login</title>
+        <title>LiveChat | Login</title>
         <link href = "login.css" type = text/css rel = stylesheet>
         <script src = 'https://cdn.firebase.com/js/client/2.4.1/firebase.js'></script>
         <script src = 'https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js'></script>
@@ -11,7 +11,8 @@
             <input type = text id = 'email' placeholder = "Email" autocorrect="off" autocapitalize="off" 
 spellcheck="false">
             <input type = password id = 'password' placeholder = "Password">
-            <button type = "button" onclick= "login()">Sign In</button>
+            <button type = "button" onclick = "login()">Sign In</button>
+            <button type = 'button' onclick = "guestLogin()">Guest</button>
         </div>
         <script src = 'login.js'></script>
     </body>
