--- a/chat.html
+++ b/chat.html
@@ -2,14 +2,16 @@
 <html>
     <head>
         <title>LiveChat</title>
+        <link href = "chat.css" type = text/css rel = stylesheet>
         <script src = 'https://cdn.firebase.com/js/client/2.4.1/firebase.js'></script>
         <script src = 'https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js'></script>
         
     </head>
     <body>
         <div id = 'messagesDiv'></div>
-        <input type = 'text' id = 'messageInput' placeholder= "Message">
-        <button type = "button" onclick= "end()">Clear</button>
+        <input type = 'text' id = 'messageInput' placeholder= "Message" autocorrect="off" autocapitalize="off" 
+spellcheck="false">
+        <button type = "button" onclick= "send()">Send</button>
         <script src = "chat.js"></script>
     </body>
 </html>
