--- a/chat.html
+++ b/chat.html
@@ -8,6 +8,7 @@
         
     </head>
     <body>
+        <h1>LiveChat</h1>
         <div id = 'messagesDiv'></div>
         <input type = 'text' id = 'messageInput' placeholder= "Message" autocorrect="off" autocapitalize="off" 
 spellcheck="false">
