--- a/chat.html
+++ b/chat.html
@@ -3,9 +3,9 @@
     <head>
         <title>LiveChat</title>
         <link href = "chat.css" type = text/css rel = stylesheet>
+        <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
         <script src = 'https://cdn.firebase.com/js/client/2.4.1/firebase.js'></script>
         <script src = 'https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js'></script>
-        
     </head>
     <body>
         <h1>LiveChat</h1>
