user set nicknames

--- a/index.html
+++ b/index.html
@@ -8,11 +8,9 @@
     </head>
     <body>
         <div id = 'login-panel'>
-            <input type = text id = 'email' placeholder = "Email" autocorrect="off" autocapitalize="off" 
+            <input type = text id = 'email' placeholder = "Name" autocorrect="off" autocapitalize="off" 
 spellcheck="false">
-            <input type = password id = 'password' placeholder = "Password">
-            <button type = "button" onclick = "login()">Sign In</button>
-            <button type = 'button' onclick = "guestLogin()">Guest</button>
+            <button type = "button" onclick = "login()">Enter</button>
         </div>
         <script src = 'login.js'></script>
     </body>
