--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div id = 'login-panel'>
-            <input type = text id = 'email' placeholder = "Name" autocorrect="off" autocapitalize="off" 
+            <input type = text id = 'email' placeholder = "Nickname" autocorrect="off" autocapitalize="off" 
 spellcheck="false">
             <button type = "button" onclick = "login()">Enter</button>
         </div>
